Error Mitigation/MagiCoder/Data/java_rmi_activation/java_rmi_activationOutputResult.txt
Sample: ActivationDesc_3
----------------------------------------------------------------
output:
./Data/java_rmi_activation/javaFiles/ActivationDesc_3.java:1: error: package java.rmi.activation does not exist
import java.rmi.activation.ActivationDesc;
                          ^
./Data/java_rmi_activation/javaFiles/ActivationDesc_3.java:5: error: cannot find symbol
        ActivationDesc desc = new ActivationDesc(null, "java.lang.String", null, null, null, null);
        ^
  symbol:   class ActivationDesc
  location: class ActivationDesc_3
./Data/java_rmi_activation/javaFiles/ActivationDesc_3.java:5: error: cannot find symbol
        ActivationDesc desc = new ActivationDesc(null, "java.lang.String", null, null, null, null);
                                  ^
  symbol:   class ActivationDesc
  location: class ActivationDesc_3
3 errors


================================================================

Sample: ActivationGroupID_4
----------------------------------------------------------------
output:
./Data/java_rmi_activation/javaFiles/ActivationGroupID_4.java:1: error: package java.rmi.activation does not exist
import java.rmi.activation.ActivationGroupID;
                          ^
./Data/java_rmi_activation/javaFiles/ActivationGroupID_4.java:5: error: cannot find symbol
        ActivationGroupID id1 = new ActivationGroupID("group1", "system1");
        ^
  symbol:   class ActivationGroupID
  location: class ActivationGroupID_4
./Data/java_rmi_activation/javaFiles/ActivationGroupID_4.java:5: error: cannot find symbol
        ActivationGroupID id1 = new ActivationGroupID("group1", "system1");
                                    ^
  symbol:   class ActivationGroupID
  location: class ActivationGroupID_4
./Data/java_rmi_activation/javaFiles/ActivationGroupID_4.java:6: error: cannot find symbol
        ActivationGroupID id2 = new ActivationGroupID("group1", "system1");
        ^
  symbol:   class ActivationGroupID
  location: class ActivationGroupID_4
./Data/java_rmi_activation/javaFiles/ActivationGroupID_4.java:6: error: cannot find symbol
        ActivationGroupID id2 = new ActivationGroupID("group1", "system1");
                                    ^
  symbol:   class ActivationGroupID
  location: class ActivationGroupID_4
./Data/java_rmi_activation/javaFiles/ActivationGroupID_4.java:7: error: cannot find symbol
        ActivationGroupID id3 = new ActivationGroupID("group2", "system1");
        ^
  symbol:   class ActivationGroupID
  location: class ActivationGroupID_4
./Data/java_rmi_activation/javaFiles/ActivationGroupID_4.java:7: error: cannot find symbol
        ActivationGroupID id3 = new ActivationGroupID("group2", "system1");
                                    ^
  symbol:   class ActivationGroupID
  location: class ActivationGroupID_4
7 errors


================================================================

Sample: ActivationGroupID_5
----------------------------------------------------------------
output:
./Data/java_rmi_activation/javaFiles/ActivationGroupID_5.java:1: error: package java.rmi.activation does not exist
import java.rmi.activation.ActivationGroupID;
                          ^
./Data/java_rmi_activation/javaFiles/ActivationGroupID_5.java:5: error: cannot find symbol
        ActivationGroupID groupID = new ActivationGroupID();
        ^
  symbol:   class ActivationGroupID
  location: class ActivationGroupID_5
./Data/java_rmi_activation/javaFiles/ActivationGroupID_5.java:5: error: cannot find symbol
        ActivationGroupID groupID = new ActivationGroupID();
                                        ^
  symbol:   class ActivationGroupID
  location: class ActivationGroupID_5
3 errors


================================================================

